--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
     <label for="inputDOB" class="">Date of Birth:</label>
-    <input type="date" id="inputDOB" value="DOB" class="js-form-control form-control" required autofocus>
+    <input type="date" id="inputDOB" class="form-control" required autofocus>
 
     <label for="inputHeight" class="sr-only">Height (in inches)</label>
     <input type="text" id="inputHeight" class="form-control" placeholder="Height (in inches)" required autofocus>
