--- a/signup.html
+++ b/signup.html
@@ -47,13 +47,20 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signup">
+  <form class="form-signup" method="POST" action="signup.php">
     <img src="https://img.icons8.com/windows/64/000000/dumbbell.png" />
     <h1 class="h3 mb-3 font-weight-normal">Please sign up!</h1>
     <label for="inputUsername" class="sr-only">Username</label>
     <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+
+    <label for="inputFName" class="sr-only">Username</label>
+    <input type="text" id="inputFName" class="form-control" placeholder="First Name" required autofocus>
+    <label for="inputLName" class="sr-only">Username</label>
+    <input type="text" id="inputLName" class="form-control" placeholder="Last Name" required autofocus>
+
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
