--- a/html/login.html
+++ b/html/login.html
@@ -43,7 +43,7 @@
     }
   </style>
   <!-- Custom styles for this template -->
-  <link href="login.css" rel="stylesheet">
+  <link href="css/login.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
