--- a/html/userhome.html
+++ b/html/userhome.html
@@ -43,7 +43,7 @@
     }
   </style>
   <!-- Custom styles for this template -->
-  <link href="userhome.css" rel="stylesheet">
+  <link href="css/userhome.css" rel="stylesheet">
 </head>
 
 <body>
