--- a/html/index.html
+++ b/html/index.html
@@ -87,8 +87,8 @@
         <h1>Enhance your workout experience</h1>
         <p class="lead text-muted">An advanced, user-friendly workout app that allows gym-goers to pick and choose their favorite programs. Make gains like never before.</p>
         <p>
-          <a href="signup.html" class="btn btn-primary my-2">Sign up!</a>
-          <a href="login.html" class="btn btn-secondary my-2">Log in</a>
+          <a href="html/signup.html" class="btn btn-primary my-2">Sign up!</a>
+          <a href="html/login.html" class="btn btn-secondary my-2">Log in</a>
         </p>
       </div>
     </section>
