--- a/html/index.html
+++ b/html/index.html
@@ -84,7 +84,7 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1>Enhance your workout WWWWexperience</h1>
+        <h1>Enhance your workout experience</h1>
         <p class="lead text-muted">An advanced, user-friendly workout app that allows gym-goers to pick and choose their favorite programs. Make gains like never before.</p>
         <p>
           <a href="html/signup.html" class="btn btn-primary my-2">Sign up!</a>
