--- a/html/signup.html
+++ b/html/signup.html
@@ -43,7 +43,7 @@
     }
   </style>
   <!-- Custom styles for this template -->
-  <link href="/css/signup.css" rel="stylesheet">
+  <link href="../css/signup.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
