Changed reference to signup.php

--- a/html/signup.html
+++ b/html/signup.html
@@ -47,7 +47,7 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signup" method="POST" action="/signup.php">
+  <form class="form-signup" method="POST" action="../signup.php">
     <img src="https://img.icons8.com/windows/64/000000/dumbbell.png" />
     <h1 class="h3 mb-3 font-weight-normal">Please sign up!</h1>
     <label for="inputUsername" class="sr-only">Username</label>
