--- a/html/signup.html
+++ b/html/signup.html
@@ -72,7 +72,7 @@
 
     <label for="inputWeight" class="sr-only">Weight (in pounds)</label>
     <input type="text" id="inputWeight" class="form-control" placeholder="Weight (in pounds)" required autofocus>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+    <input class="btn btn-lg btn-primary btn-block" type="submit">Sign up</input>
     <p class="mt-5 mb-3 text-muted">&copy; 2020-2020</p>
   </form>
 </body>
