changed id to name

--- a/html/signup.html
+++ b/html/signup.html
@@ -51,27 +51,27 @@
     <img src="https://img.icons8.com/windows/64/000000/dumbbell.png" />
     <h1 class="h3 mb-3 font-weight-normal">Please sign up!</h1>
     <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus/>
+    <input type="text" name="inputUsername" class="form-control" placeholder="Username" required autofocus/>
 
     <label for="inputFName" class="sr-only">Username</label>
-    <input type="text" id="inputFName" class="form-control" placeholder="First Name" required autofocus/>
+    <input type="text" name="inputFName" class="form-control" placeholder="First Name" required autofocus/>
     <label for="inputLName" class="sr-only">Username</label>
-    <input type="text" id="inputLName" class="form-control" placeholder="Last Name" required autofocus/>
+    <input type="text" name="inputLName" class="form-control" placeholder="Last Name" required autofocus/>
 
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus/>
+    <input type="email" name="inputEmail" class="form-control" placeholder="Email address" required autofocus/>
 
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required/>
+    <input type="password" name="inputPassword" class="form-control" placeholder="Password" required/>
 
     <label for="inputDOB" class="">Date of Birth:</label>
-    <input type="date" id="inputDOB" class="form-control" required autofocus/>
+    <input type="date" name="inputDOB" class="form-control" required autofocus/>
 
     <label for="inputHeight" class="sr-only">Height (in inches)</label>
-    <input type="text" id="inputHeight" class="form-control" placeholder="Height (in inches)" required autofocus/>
+    <input type="text" name="inputHeight" class="form-control" placeholder="Height (in inches)" required autofocus/>
 
     <label for="inputWeight" class="sr-only">Weight (in pounds)</label>
-    <input type="text" id="inputWeight" class="form-control" placeholder="Weight (in pounds)" required autofocus/>
+    <input type="text" name="inputWeight" class="form-control" placeholder="Weight (in pounds)" required autofocus/>
     <input class="btn btn-lg btn-primary btn-block" type="submit" value="Sign Up"/>
     <p class="mt-5 mb-3 text-muted">&copy; 2020-2020</p>
   </form>
