A ton of updates regarding login stuff

--- a/html/login.html
+++ b/html/login.html
@@ -51,9 +51,9 @@
     <img src="https://img.icons8.com/windows/64/000000/dumbbell.png" />
     <h1 class="h3 mb-3 font-weight-normal">Please log in!</h1>
     <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+    <input type="text" name="inputUsername" class="form-control" placeholder="Username" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <input type="password" name="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
