--- a/html/login.html
+++ b/html/login.html
@@ -47,7 +47,7 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signin">
+  <form class="form-signin" method="post" action="../login.php/">
     <img src="https://img.icons8.com/windows/64/000000/dumbbell.png" />
     <h1 class="h3 mb-3 font-weight-normal">Please log in!</h1>
     <label for="inputUsername" class="sr-only">Username</label>
