adding comments to each file

--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,12 @@
+<!-- 
+Created by: Daegan Wilcox
+This is the index html page that is used in index.php. 
+This was initially used as a template for our
+first submission. With the need to use php to access
+our database, we included it in php file.
+
+Potential files in sequence as a result of action: login.html or signup.html
+-->
 <!doctype html>
 <html lang="en">
 
