--- a/html/login.html
+++ b/html/login.html
@@ -1,3 +1,13 @@
+<!-- 
+Created by: Daegan Wilcox
+This is the login html page. When accessing it from the 
+home page (or index.php), users will be able to 
+input information that will allow them to log in. This 
+file is linked with login.php in order to perform the
+action of logging in.
+
+file in sequence as a result of action: login.php
+-->
 <!doctype html>
 <html lang="en">
 
