--- a/html/signup.html
+++ b/html/signup.html
@@ -1,3 +1,13 @@
+<!-- 
+Created by: Daegan Wilcox
+This is the signup html page. When accessing it from the 
+home page (or index.php), users will be able to 
+input information that will allow them to sign up. This 
+file is linked with signup.php in order to perform the
+action of signing up. 
+
+file in sequence as a result of action: signup.php
+-->
 <!doctype html>
 <html lang="en">
 
